adding animation for agent

--- a/app/src/main/res/layout/activity_room_layout.xml
+++ b/app/src/main/res/layout/activity_room_layout.xml
@@ -49,6 +49,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/waveView"
+        android:layout_width="400dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/leaveButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:lottie_rawRes="@raw/wave_animation"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="false"
+        android:visibility="gone" />
+
 
     <!-- Disconnect button -->
     <Button
